sumo/tests/netconvert/import/XML/errors/xml_false_nod/errors.netconvert
Error: Could not open nodes-file 'hokkaido.nod.xml'.
Quitting (on error).
